- Hide cursor when sending a window to background
- Allow to show short text for icons on ZX Desktop
- Preserve icon name when changing its type
- Added rzx files support for file selector: can be expanded (to z80 snap file), show file previews, convert to SCR, convert to Z80, use as ZX Desktop background
- Fixed glitch duplicating Main Menu when pressing F6 on Main Menu

Improved Debug CPU:
- Show port number when port read opcode (IN, INI, etc). Show keyboard row when port is XXFEH on Spectrum
- Show view number inside the window and not in the window title
- Added pass count to breakpoints (a breakpoint that is triggered when the condition is hit a certain times)
- Improved edit breakpoint window
- Added option to enable/disable all breakpoints
- Fixed moving cursor up when address near 0

Improve Memory Cheat:
- Allow to set initial address
- Can delete watches
- Improve window layout

Improve maximum sent keys to ZENG/ZENG Online
Improved Windows timing and any other system using SDL video driver. Now uses SDL Timing
Improved Mac timing by using native timer
Improved Watermark Logo: can be shown only when loading/saving, can change colors when loading/saving
Improved File Selector: allow to use path to a FAT mounted image on all cases
Improved Visual Cassette Tape window: support standard tape too
Improved Custom rom setting adding a Reset machine option
Improved DivMMC, DivIDE and ZXMMC emulation: allow to enable them even if no MMC/SD card or IDE inserted
Improved View Basic window: allow lines > 9999, useful for protected programs

* Fixes:

Fixed semaphore locking on Windows
Fixed cpu usage calculation when footer is disabled
Fixed setting esxdos handler root dir when loading a .nex file without path from command line
Fixed bug restoring ZSF snapshot with DivIDE enabled
Fixed segfault when pressing CTRL-C on console
Fixed PCW palette colour changes
Fixed Chloe keyboard: allow fast text writing