@@ -8223,6 +8223,8 @@ void menu_debug_help(void)
         "El primer carácter a la izquierda es (>) si el registro PC coincide con esta dirección y no hay un breakpoint.\n"
         "\n"
         "En esta vista también se visualizan, en color rojo, los registros que modificará la instrucción en que está posicionado el cursor.\n"
+        "También, a la derecha del opcode, se ve si se cumple una condición de salto y/o la anterior dirección en el historial, "
+        "si el historial de cpu está habilitado.\n"
         "\n"
         "2 - Vista de una línea de desensamblado, registros y diferentes puertos hardware\n"
         "\n"
@@ -8302,6 +8304,8 @@ void menu_debug_help(void)
         "N: Permite ejecutar continuamente hacia atrás. Requiere tener el historial de la cpu habilitado y sólo está disponible en modo paso a paso. "
         "Lógicamente esta ejecución hacia atrás tiene un límite, determinado en el menu Settings-> Debug-> Max history items\n"
         "\n"
+        "shift+cursor up: Ir a la dirección previa en el historial. Requiere tener el historial de la cpu habilitado y sólo está disponible en modo paso a paso\n"
+        "\n"
         "g: Ver los gráficos de una aventura hecha con GAC\n"
         "\n"
         "Teclas sólo para la vista 8, de debug de aventura conversacional:\n"
@@ -8337,6 +8341,8 @@ void menu_debug_help(void)
         "El primer caràcter a l'esquerra és (>) si el registre PC coincideix amb aquesta adreça i no hi ha un breakpoint.\n"
         "\n"
         "En aquesta vista també es visualitzen, en color vermell, els registres que modificarà la instrucció en que està posicionat el cursor.\n"
+        "També, a la dreta del opcode, es veu si es compleix una condició de salt i/o l'anterior adreça a l'historial, "
+        "si l'historial de la cpu està habilitat.\n"
         "\n"
         "2 - Vista d'una línia de desassemblatge, registres i diferents ports de maquinari\n"
         "\n"
@@ -8416,6 +8422,8 @@ void menu_debug_help(void)
         "N: Permet executar contínuament cap enrere. Requereix tenir l'historial de la cpu habilitat i només està disponible en mode pas a pas."
         "Lògicament aquesta execució cap enrere té un límit, determinat al menú Settings-> Debug-> Max history items\n"
         "\n"
+        "shift+cursor up: Anar a l'adreça previa a l'historial. You need cpu execution history enabled and it's only available on step mode\n"
+        "\n"
         "g: Vegeu els gràfics d'una aventura feta amb GAC\n"
         "\n"
         "Tecles només per a la vista 8, de debug d'aventura conversacional:\n"
@@ -8452,6 +8460,8 @@ void menu_debug_help(void)
         "The first left character is (>) if PC register matches this address and there is no breakpoint.\n"
         "\n"
         "In this view you can also see, in red color, which registers will be modified by the opcode the cursor is in.\n"
+        "Also, right to the opcode, you can see if a jump satisties a condition and/or previous address in history, "
+        "if cpu execution history is enabled.\n"
         "\n"
         "2 - View with one disassembly line, registers and different hardware ports\n"
         "\n"
@@ -8479,7 +8489,7 @@ void menu_debug_help(void)
         "When not in step mode, machine emulated continues running. Besides, on step mode, "
         "emulation is stopped, and an opcode is run on every pressing of key Enter\n"
         "\n"
-        "c: continuos mode: Repeated execution of step mode without pressing any key. It has different speeds:\n"
+        "c: continuous mode: Repeated execution of step mode without pressing any key. It has different speeds:\n"
         "0: 0.5 pause between every opcode\n"
         "1: 0.1 pause between every opcode\n"
         "2: 0.02 pause between every opcode\n"
@@ -8530,6 +8540,8 @@ void menu_debug_help(void)
         "\n"
         "N: You can run backwards continuously. You need cpu execution history enabled and it's only available on step mode. "
         "This backwards execution has a limit defined on menu Settings-> Debug-> Max history items\n"
+        "\n"
+        "shift+cursor up: Go to the previous address in history. You need cpu execution history enabled and it's only available on step mode\n"
         "\n"
         "g: See the graphics of a GAC text adventure\n"
         "\n"
